--- a/program/assondataset.ipynb
+++ b/program/assondataset.ipynb
@@ -399,181 +399,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shivam Mavi\n",
-      "Joshua Little\n",
-      "Kane Williamson\n",
-      "K.S. Bharat\n",
-      "Mohit Sharma\n",
-      "Odean Smith\n",
-      "Urvil Patel\n",
-      "Rahul Tewatia\n",
-      "Pradeep Sangwan\n",
-      "Rashid Khan\n",
-      "R. Sai Kishore\n",
-      "Yash Dayal\n",
-      "Noor Ahmad\n",
-      "Wriddhiman Saha\n",
-      "Vijay Shankar\n",
-      "Shubman Gill\n",
-      "Hardik Pandya\n",
-      "B. Sai Sudharsan\n",
-      "Alzarri Joseph\n",
-      "Abhinav Sadarangani\n",
-      "Darshan Nalkande\n",
-      "David Miller\n",
-      "Matthew Wade\n",
-      "Jayant Yadav\n",
-      "Mohammad Shami\n",
-      "Ben Stokes\n",
-      "Kyle Jamieson\n",
-      "Nishant Sindhu\n",
-      "Ajinkya Rahane\n",
-      "Bhagath Varma\n",
-      "Ajay Mandal\n",
-      "Shaik Rasheed\n",
-      "Ravindra Jadeja\n",
-      "Rajvardhan Hangargekar\n",
-      "Prashant Solanki\n",
-      "Ruturaj Gaikwad\n",
-      "Tushar Deshpande\n",
-      "Mukesh Choudhary\n",
-      "Subhranshu Senapati\n",
-      "Simarjeet Singh\n",
-      "Shivam Dube\n",
-      "Matheesha Pathirana\n",
-      "Devon Conway\n",
-      "Deepak Chahar\n",
-      "Ambati Rayudu\n",
-      "Dwaine Pretorius\n",
-      "Maheesh Theekshana\n",
-      "Moeen Ali\n",
-      "Mitchell Santner\n",
-      "MS Dhoni\n",
-      "Mukesh Kumar\n",
-      "Rilee Rossouw\n",
-      "Manish Pandey\n",
-      "Phil Salt\n",
-      "Ishant Sharma\n",
-      "Ripal Patel\n",
-      "Pravin Dubey\n",
-      "Rishabh Pant\n",
-      "Prithvi Shaw\n",
-      "Syed Khaleel Ahmed\n",
-      "Yash Dhull\n",
-      "Vicky Ostwal\n",
-      "Mustafizur Rahman\n",
-      "Sarfaraz Khan\n",
-      "Rovman Powell\n",
-      "Lalit Yadav\n",
-      "Axar Patel\n",
-      "Anrich Nortje\n",
-      "Aman Khan (T)\n",
-      "Chetan Sakariya\n",
-      "David Warner\n",
-      "Lungisani Ngidi\n",
-      "Kuldeep Yadav\n",
-      "Kamlesh Nagarkoti\n",
-      "Mitchell Marsh\n",
-      "Shakib Al Hasan\n",
-      "David Wiese\n",
-      "N. Jagadeesan\n",
-      "Vaibhav Arora\n",
-      "Litton Das\n",
-      "Mandeep Singh\n",
-      "Kulwant Khejroliya\n",
-      "Suyash Sharma\n",
-      "Sunil Narine\n",
-      "Shreyas Iyer\n",
-      "Tim Southee\n",
-      "Umesh Yadav\n",
-      "Varun Chakaravarthy\n",
-      "Shardul Thakur (T)\n",
-      "Venkatesh Iyer\n",
-      "Harshit Rana\n",
-      "Anukul Roy\n",
-      "Andre Russell\n",
-      "Lockie Ferguson (T)\n",
-      "Nitish Rana\n",
-      "Rahmanullah Gurbaz (T)\n",
-      "Rinku Singh\n",
-      "Sam Curran\n",
-      "Sikandar Raza\n",
-      "Harpreet Bhatia\n",
-      "Mohit Rathee\n",
-      "Vidwath Kaverappa\n",
-      "Shivam Singh\n",
-      "Liam Livingstone\n",
-      "Baltej Singh Dhanda\n",
-      "Atharva Taide\n",
-      "Bhanuka Rajapakse\n",
-      "Jitesh Sharma\n",
-      "Nathan Ellis\n",
-      "Jonny Bairstow\n",
-      "Kagiso Rabada\n",
-      "Harpreet Brar\n",
-      "Shahrukh Khan\n",
-      "Shikhar Dhawan\n",
-      "Rahul Chahar\n",
-      "Arshdeep Singh\n",
-      "Prabhsimran Singh\n",
-      "Raj Angad Bawa\n",
-      "Rishi Dhawan\n",
-      "Nicholas Pooran\n",
-      "Daniel Sams\n",
-      "Jaydev Unadkat\n",
-      "Naveen Ul Haq\n",
-      "Amit Mishra\n",
-      "Romario Shepherd\n",
-      "Yash Thakur\n",
-      "Swapnil Singh\n",
-      "Yudhvir Charak\n",
-      "Prerak Mankad\n",
-      "Mark Wood\n",
-      "Marcus Stoinis\n",
-      "Mayank Yadav\n",
-      "Mohsin Khan\n",
-      "Quinton De Kock\n",
-      "Manan Vohra\n",
-      "Ravi Bishnoi\n",
-      "Deepak Hooda\n",
-      "Ayush Badoni\n",
-      "Avesh Khan\n",
-      "K. Gowtham\n",
-      "Karan Sharma\n",
-      "Krunal Pandya\n",
-      "KL Rahul\n",
-      "Kyle Mayers\n",
-      "Cameron Green\n",
-      "Jhye Richardson\n",
-      "Piyush Chawla\n",
-      "Raghav Goyal\n",
-      "Shams Mulani\n",
-      "Nehal Wadhera\n",
-      "Vishnu Vinod\n",
-      "Duan Jansen\n",
-      "Ramandeep Singh\n",
-      "N. Tilak Varma\n",
-      "Mohd. Arshad Khan\n",
-      "Rohit Sharma\n",
-      "Suryakumar Yadav\n",
-      "Kumar Kartikeya Singh\n",
-      "Tristan Stubbs*\n",
-      "Tim David\n",
-      "Hrithik Shokeen\n",
-      "Arjun Tendulkar\n",
-      "Akash Madhwal\n",
-      "Dewald Brevis\n",
-      "Ishan Kishan\n",
-      "Jasprit Bumrah\n",
-      "Jason Behrendorff (T)\n",
-      "Jofra Archer\n",
       "Will Jacks\n",
       "Reece Topley\n",
       "Rajan Kumar\n",
@@ -598,385 +430,33 @@
       "Faf Du Plessis\n",
       "Harshal Patel\n",
       "Glenn Maxwell\n",
-      "Josh Hazlewood\n",
-      "Jason Holder\n",
-      "Adam Zampa\n",
-      "Joe Root\n",
-      "Donovan Ferreira\n",
-      "K.M. Asif\n",
-      "Kunal Rathore\n",
-      "Abdul P A\n",
-      "Akash Vashisht\n",
-      "Murugan Ashwin\n",
-      "Sanju Samson\n",
-      "Riyan Parag\n",
-      "R. Ashwin\n",
-      "Shimron Hetmyer\n",
-      "Trent Boult\n",
-      "Prasidh Krishna\n",
-      "Yuzvendra Chahal\n",
-      "Yashasvi Jaiswal\n",
-      "K.C Cariappa\n",
-      "Dhruv Jurel\n",
-      "Devdutt Padikkal\n",
-      "Jos Buttler\n",
-      "Kuldeep Sen\n",
-      "Navdeep Saini\n",
-      "Kuldip Yadav\n",
-      "Obed Mccoy\n",
-      "Harry Brook\n",
-      "Mayank Agarwal\n",
-      "Heinrich Klaasen\n",
-      "Vivrant Sharma\n",
-      "Adil Rashid\n",
-      "Mayank Dagar\n",
-      "Akeal Hosein\n",
-      "Mayank Markande\n",
-      "Upendra Singh Yadav\n",
-      "Nitish Kumar Reddy\n",
-      "Samarth Vyas\n",
-      "Anmolpreet Singh\n",
-      "Sanvir Singh\n",
-      "Marco Jansen\n",
-      "Rahul Tripathi\n",
-      "Umran Malik\n",
-      "Washington Sundar\n",
-      "Kartik Tyagi\n",
-      "T. Natarajan\n",
-      "Fazalhaq Farooqi\n",
-      "Abdul Samad\n",
-      "Abhishek Sharma\n",
-      "Aiden Markram\n",
-      "Bhuvneshwar Kumar\n",
-      "Glenn Phillips\n",
-      "Tom Banton\n",
-      "Kusal Mendis\n",
-      "Chris Jordan\n",
-      "Adam Milne\n",
-      "Mujeeb Rahman\n",
-      "Tabraiz Shamsi\n",
-      "Shubham Khajuria\n",
-      "Rohan Kunnummal\n",
-      "Chethan L.R.\n",
-      "Himmat Singh\n",
-      "Corbin Bosch\n",
-      "Priyam Garg\n",
-      "Saurabh Kumar\n",
-      "Shashank Singh\n",
-      "Mohammed Azharuddeen\n",
-      "Dinesh Bana\n",
-      "Abhimanyu Easwaran\n",
-      "Sumit Kumar\n",
-      "Lance Morris\n",
-      "Mujtaba Yousuf\n",
-      "Chintal Gandhi\n",
-      "Shreyas Gopal\n",
-      "S Midhun\n",
-      "Izharulhuq Naveed\n",
-      "Travis Head\n",
-      "Dawid Malan\n",
-      "Sherfane Rutherford\n",
-      "Paul Stirling\n",
-      "Rassie Van Der Dussen\n",
-      "Daryl Mitchell\n",
-      "Mohammad Nabi\n",
-      "Jimmy Neesham\n",
-      "Wayne Parnell\n",
-      "Dasun Shanaka\n",
-      "Taskin Ahmed\n",
-      "Dushmanta Chameera\n",
-      "Riley Meredith\n",
-      "Blessing Muzarabani\n",
-      "Sandeep Sharma\n",
-      "Johnson Charles\n",
-      "Andre Fletcher\n",
-      "Shai Hope\n",
-      "Tom Latham\n",
-      "Joshua Philippe\n",
-      "Lorcan Tucker\n",
-      "Shahbaz Nadeem\n",
-      "Ish Sodhi\n",
-      "Sachin Baby\n",
-      "Ashwin Hebbar\n",
-      "Pukhraj Mann\n",
-      "Akshat Raghuwanshi\n",
-      "Himanshu Rana\n",
-      "Shoun Roger\n",
-      "Virat Singh\n",
-      "Will Smeed\n",
-      "Apoorv Wankhade\n",
-      "Gerald Coetzee\n",
-      "Evan Jones\n",
-      "Abid Mushtaq\n",
-      "Suryansh Shedge\n",
-      "Jagadeesha Suchith\n",
-      "Ricky Bhui\n",
-      "Baba Indrajith\n",
-      "Sheldon Jackson\n",
-      "Aryan Juyal\n",
-      "Kirant Shinde\n",
-      "Luvnith Sisodia\n",
-      "Vishnu Solanki\n",
-      "Aniket Choudhary\n",
-      "Ravi Kumar\n",
-      "Sushant Mishra\n",
-      "Arzan Nagwaswalla\n",
-      "Ishan Porel\n",
-      "Akash Singh\n",
-      "Basil Thampi\n",
-      "Paul Van Meekeren\n",
-      "Vyshak Vijay Kumar\n",
-      "S.Ajith Ram\n",
-      "Satyajeet Bachhav\n",
-      "Tejas Baroka\n",
-      "Yuvraj Chudasama\n",
-      "Peter Hatzoglou\n",
-      "Karthik Meiyappan\n",
-      "Shivam Sharma\n",
-      "Reeza Hendricks\n",
-      "Christiaan Jonker\n",
-      "Brandon King\n",
-      "Chris Lynn\n",
-      "Karun Nair\n",
-      "Pathum Nissaanka\n",
-      "Jason Roy\n",
-      "Gurkeerat Singh\n",
-      "Harry Tector\n",
-      "Najibullah Zadran\n",
-      "Sean Abbott\n",
-      "Qais Ahmad\n",
-      "Charith Asalanka\n",
-      "Michael Bracewell\n",
-      "Dominic Drakes\n",
-      "George Garton\n",
-      "Chamika Karunaratne\n",
-      "Jamie Overton\n",
-      "Sandeep Warrier\n",
-      "Ben Dwarshuis\n",
-      "Richard Gleeson\n",
-      "Lahiru Kumara\n",
-      "Dilshan Madushanka\n",
-      "Billy Stanlake\n",
-      "Andrew Tye\n",
-      "Luke Wood\n",
-      "Priyansh Arya\n",
-      "Matthew Breetzke\n",
-      "Shivam Chauhan\n",
-      "Rahul Gahlaut\n",
-      "Sudip Gharami\n",
-      "C. Hari Nishaanth\n",
-      "Amandeep Khare\n",
-      "Bhanu Pania\n",
-      "Ekant Sen\n",
-      "Akash Singh\n",
-      "Himanshu Bisht\n",
-      "Mickil Jaiswal\n",
-      "G.Aniketh Reddy\n",
-      "Atit Sheth\n",
-      "M. Siddharth\n",
-      "Tanay Thyagarajann\n",
-      "Sumeet Verma\n",
-      "Sanjay Yadav\n",
-      "Ajitesh Guruswamy\n",
-      "Yash Kothari\n",
-      "Suresh Kumar\n",
-      "Kumar Kushagra\n",
-      "Anmol Malhotra\n",
-      "Robin Minz\n",
-      "Agniv Pan\n",
-      "Priyesh Patel\n",
-      "Mitesh Patel\n",
-      "Abishek Porel\n",
-      "Bharat Sharma\n",
-      "Vivek Singh\n",
-      "Abhijeet Tomar\n",
-      "Basit Bashir\n",
-      "Nandre Burger\n",
-      "Rasikh Dar\n",
-      "Sakib Hussain\n",
-      "Waseem Khanday\n",
-      "Ravi Kiran Majeti\n",
-      "Lukman Hussain Meriwala\n",
-      "Anuj Raj\n",
-      "Ankit Singh Rajpoot\n",
-      "Prince Yadav\n",
-      "Prithviraj Yarra\n",
-      "Mushtaq Beg\n",
-      "Rocky Bhasker\n",
-      "Sanjith Devaraj\n",
-      "Allah Mohammad\n",
-      "Lalit Mohan\n",
-      "Bhuwan Rohilla\n",
-      "Aman Sharma\n",
-      "Manav Suthar\n",
-      "Tom Curran\n",
-      "Moises Henriques\n",
-      "Afif Hossain\n",
-      "Scott Kuggeleijn\n",
-      "Sisanda Magala\n",
-      "Craig Overton\n",
-      "Darcy Short\n",
-      "Dhananjaya Silva\n",
-      "Dunith Wellalage\n",
-      "Varun Aaron\n",
-      "Sheldon Cottrel\n",
-      "Nathan Coulter-Nile\n",
-      "Daryn Dupavillon\n",
-      "Matt Henry\n",
-      "Dhawal Kulkarni\n",
-      "Tymal Mills\n",
-      "David Payne\n",
-      "Barinder Sran\n",
-      "Glenton Stuurman\n",
-      "Anirudh Balachander\n",
-      "Gourav Choudhary\n",
-      "Saurav Chuahan\n",
-      "Kumar Deobrat\n",
-      "Chirag Gandhi\n",
-      "Arman Jaffer\n",
-      "Madhav Kaushik\n",
-      "Priyank Panchal\n",
-      "Ayush Pandey\n",
-      "Rohan Patil\n",
-      "Sanjay Ramaswamy\n",
-      "Siddharth Yadav\n",
-      "Rehan Ahmed\n",
-      "Prayas Barman\n",
-      "Rahul Buddhi\n",
-      "Vaisakh Chandran\n",
-      "Writtick Chatterjee\n",
-      "Prashant Chopra\n",
-      "Harsh Dubey\n",
-      "Tanush Kotian\n",
-      "Ninad Rathva\n",
-      "B. Surya\n",
-      "Jordan Thompson\n",
-      "Shivank Vashisth\n",
-      "Ankush Bains\n",
-      "Christopher Benjamin\n",
-      "Connor Esterhuizen\n",
-      "Mohd Arslan Khan\n",
-      "Mamidi Krishna\n",
-      "Fazil Makaya\n",
-      "Akshdeep Nath\n",
-      "Deepak Punia\n",
-      "Ateev Saini\n",
-      "Bipin Saurabh\n",
-      "B.R. Sharath\n",
-      "Yashovardhan Singh\n",
-      "Lakshay Thareja\n",
-      "Mohit Avasthi\n",
-      "Ottneil Baartman\n",
-      "Gurnoor Singh Brar\n",
-      "Shahrukh Dar\n",
-      "Thomas Helm\n",
-      "Pankaj Jaswal\n",
-      "Venkatesh Muralidhara\n",
-      "Geet Puri\n",
-      "E. Sanketh\n",
-      "Ajay Sarkar\n",
-      "Ashok Sharma\n",
-      "Kanwar Singh\n",
-      "Fabian Allen\n",
-      "Carlos Brathwaite\n",
-      "Roston Chase\n",
-      "Rahkeem Cornwall\n",
-      "Karim Janat\n",
-      "Keshav Maharaj\n",
-      "Pawan Negi\n",
-      "Keemo Paul\n",
-      "Shivam Chaudhary\n",
-      "Ashwin Das\n",
-      "James Fuller\n",
-      "Chirag Jani\n",
-      "Akshay Karnewar\n",
-      "Bhagmender Lather\n",
-      "Lone Muzaffar\n",
-      "Pulkit Narang\n",
-      "Rohit Rayudu\n",
-      "Sameer Rizvi\n",
-      "Tunish Sawkar\n",
-      "Auqib Dar\n",
-      "Mukhtar Hussain\n",
-      "Ashwani Kumar\n",
-      "Hemant Kumar\n",
-      "Nathan McAndrew\n",
-      "Rajesh Mohanty\n",
-      "Ravi Sharma\n",
-      "Vikash Singh\n",
-      "Ruben Trumpelmann\n",
-      "Koushik Vasuki\n",
-      "Vasu Vats\n",
-      "Shubham Agrawal\n",
-      "Baba Aparajith\n",
-      "Anshul Kamboj\n",
-      "Azim Kazi\n",
-      "Dev Lakra\n",
-      "Jitender Pal\n",
-      "Ritwik Roy Chowdhury\n",
-      "Utkarsh Singh\n",
-      "Shubham Singh\n",
-      "Avneesh Sudha\n",
-      "Asad Jamil Ahmed\n",
-      "Bandaru Ayyappa\n",
-      "Aashish Bhatt\n",
-      "McKenny Clarke\n",
-      "Shubham Kapse\n",
-      "Gourav Koul\n",
-      "Raunak Kumar\n",
-      "Trilok Nag\n",
-      "Atal Bihari Rai\n",
-      "Ramon Simmonds\n",
-      "Rajeev Singh\n",
-      "Mohd. Wasim\n",
-      "Atharva Ankolekar\n",
-      "Khizar Dafedar\n",
-      "Naman Dhir\n",
-      "Sahil Dhiwan\n",
-      "Sampark Gupta\n",
-      "Jordan Hermann\n",
-      "Hayden Kerr\n",
-      "Salman Khan\n",
-      "Sairaj Patil\n",
-      "Divyaansh Saxena\n",
-      "Purnank Tyagi\n",
-      "Prince Yadav\n",
-      "Deepraj Gaonkar\n",
-      "Shubham Garhwal\n",
-      "Benny Howell\n",
-      "Deepesh Nailwal\n",
-      "Arjun Rapria\n",
-      "Shashwat Rawat\n",
-      "Sumit Ruikar\n",
-      "Shivam Sharma\n",
-      "Rajandeep Singh\n",
-      "Anunay Singh\n",
-      "Digvesh Singh\n",
-      "Pranshu Vijayran\n",
-      "Prerit Dutta\n",
-      "Ramakrishna Ghosh\n",
-      "Shubhang Hegde\n",
-      "Shamshuzama Kazi\n",
-      "Ayaz Khan\n",
-      "Amit Pachhara\n",
-      "Akul Pandove\n",
-      "Garv Sangwan\n",
-      "Shubham Sharma\n",
-      "Amit Yadav\n",
-      "Amit Ali\n",
-      "Rishabh Chauhan\n",
-      "Matthew Forde\n",
-      "Sammar Gajjar\n",
-      "Rajneesh Gurbani\n",
-      "Divyansh Joshi\n",
-      "Dhruv Patel\n",
-      "Jack Prestwidge\n",
-      "Aditya Sarvate\n",
-      "Sagar Solanki\n",
-      "Prenelan Subrayen\n"
+      "Josh Hazlewood\n"
      ]
     }
    ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "i=0\n",
+    "max=1\n",
+    "with open(\"E:/Fullstack/dataset/ipl_2023_dataset.csv\",\"r\") as file_object:\n",
+    "\n",
+    "    data = csv.reader(file_object) # it will read the data from csv file store in data\n",
+    "    \n",
+    "    for line in data:   # reads from iterable data object and puts each line in line object for  every loop\n",
+    "        i=i+1\n",
+    "        \n",
+    "        if i==1:\n",
+    "            continue\n",
+    "        if line[7] == \"Unsold\":\n",
+    "            print(line[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
