--- a/program/assondataset.ipynb
+++ b/program/assondataset.ipynb
@@ -399,38 +399,338 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Will Jacks\n",
-      "Reece Topley\n",
-      "Rajan Kumar\n",
-      "Avinash Singh\n",
-      "Manoj Bhandage\n",
-      "Sonu Yadav\n",
-      "Himanshu Sharma\n",
-      "Rajat Patidar\n",
-      "Mahipal Lomror\n",
-      "Shahbaz Ahamad\n",
-      "Mohammed Siraj\n",
-      "Wanindu Hasaranga\n",
-      "Karn Sharma\n",
-      "Virat Kohli\n",
-      "Suyash Prabhudessai\n",
-      "Siddharth Kaul\n",
-      "Finn Allen\n",
-      "David Willey\n",
-      "Anuj Rawat\n",
-      "Akash Deep\n",
-      "Dinesh Karthik\n",
-      "Faf Du Plessis\n",
-      "Harshal Patel\n",
-      "Glenn Maxwell\n",
-      "Josh Hazlewood\n"
+      "Tom Banton\n",
+      "Kusal Mendis\n",
+      "Chris Jordan\n",
+      "Adam Milne\n",
+      "Mujeeb Rahman\n",
+      "Tabraiz Shamsi\n",
+      "Shubham Khajuria\n",
+      "Rohan Kunnummal\n",
+      "Chethan L.R.\n",
+      "Himmat Singh\n",
+      "Corbin Bosch\n",
+      "Priyam Garg\n",
+      "Saurabh Kumar\n",
+      "Shashank Singh\n",
+      "Mohammed Azharuddeen\n",
+      "Dinesh Bana\n",
+      "Abhimanyu Easwaran\n",
+      "Sumit Kumar\n",
+      "Lance Morris\n",
+      "Mujtaba Yousuf\n",
+      "Chintal Gandhi\n",
+      "Shreyas Gopal\n",
+      "S Midhun\n",
+      "Izharulhuq Naveed\n",
+      "Travis Head\n",
+      "Dawid Malan\n",
+      "Sherfane Rutherford\n",
+      "Paul Stirling\n",
+      "Rassie Van Der Dussen\n",
+      "Daryl Mitchell\n",
+      "Mohammad Nabi\n",
+      "Jimmy Neesham\n",
+      "Wayne Parnell\n",
+      "Dasun Shanaka\n",
+      "Taskin Ahmed\n",
+      "Dushmanta Chameera\n",
+      "Riley Meredith\n",
+      "Blessing Muzarabani\n",
+      "Sandeep Sharma\n",
+      "Johnson Charles\n",
+      "Andre Fletcher\n",
+      "Shai Hope\n",
+      "Tom Latham\n",
+      "Joshua Philippe\n",
+      "Lorcan Tucker\n",
+      "Shahbaz Nadeem\n",
+      "Ish Sodhi\n",
+      "Sachin Baby\n",
+      "Ashwin Hebbar\n",
+      "Pukhraj Mann\n",
+      "Akshat Raghuwanshi\n",
+      "Himanshu Rana\n",
+      "Shoun Roger\n",
+      "Virat Singh\n",
+      "Will Smeed\n",
+      "Apoorv Wankhade\n",
+      "Gerald Coetzee\n",
+      "Evan Jones\n",
+      "Abid Mushtaq\n",
+      "Suryansh Shedge\n",
+      "Jagadeesha Suchith\n",
+      "Ricky Bhui\n",
+      "Baba Indrajith\n",
+      "Sheldon Jackson\n",
+      "Aryan Juyal\n",
+      "Kirant Shinde\n",
+      "Luvnith Sisodia\n",
+      "Vishnu Solanki\n",
+      "Aniket Choudhary\n",
+      "Ravi Kumar\n",
+      "Sushant Mishra\n",
+      "Arzan Nagwaswalla\n",
+      "Ishan Porel\n",
+      "Akash Singh\n",
+      "Basil Thampi\n",
+      "Paul Van Meekeren\n",
+      "Vyshak Vijay Kumar\n",
+      "S.Ajith Ram\n",
+      "Satyajeet Bachhav\n",
+      "Tejas Baroka\n",
+      "Yuvraj Chudasama\n",
+      "Peter Hatzoglou\n",
+      "Karthik Meiyappan\n",
+      "Shivam Sharma\n",
+      "Reeza Hendricks\n",
+      "Christiaan Jonker\n",
+      "Brandon King\n",
+      "Chris Lynn\n",
+      "Karun Nair\n",
+      "Pathum Nissaanka\n",
+      "Jason Roy\n",
+      "Gurkeerat Singh\n",
+      "Harry Tector\n",
+      "Najibullah Zadran\n",
+      "Sean Abbott\n",
+      "Qais Ahmad\n",
+      "Charith Asalanka\n",
+      "Michael Bracewell\n",
+      "Dominic Drakes\n",
+      "George Garton\n",
+      "Chamika Karunaratne\n",
+      "Jamie Overton\n",
+      "Sandeep Warrier\n",
+      "Ben Dwarshuis\n",
+      "Richard Gleeson\n",
+      "Lahiru Kumara\n",
+      "Dilshan Madushanka\n",
+      "Billy Stanlake\n",
+      "Andrew Tye\n",
+      "Luke Wood\n",
+      "Priyansh Arya\n",
+      "Matthew Breetzke\n",
+      "Shivam Chauhan\n",
+      "Rahul Gahlaut\n",
+      "Sudip Gharami\n",
+      "C. Hari Nishaanth\n",
+      "Amandeep Khare\n",
+      "Bhanu Pania\n",
+      "Ekant Sen\n",
+      "Akash Singh\n",
+      "Himanshu Bisht\n",
+      "Mickil Jaiswal\n",
+      "G.Aniketh Reddy\n",
+      "Atit Sheth\n",
+      "M. Siddharth\n",
+      "Tanay Thyagarajann\n",
+      "Sumeet Verma\n",
+      "Sanjay Yadav\n",
+      "Ajitesh Guruswamy\n",
+      "Yash Kothari\n",
+      "Suresh Kumar\n",
+      "Kumar Kushagra\n",
+      "Anmol Malhotra\n",
+      "Robin Minz\n",
+      "Agniv Pan\n",
+      "Priyesh Patel\n",
+      "Mitesh Patel\n",
+      "Abishek Porel\n",
+      "Bharat Sharma\n",
+      "Vivek Singh\n",
+      "Abhijeet Tomar\n",
+      "Basit Bashir\n",
+      "Nandre Burger\n",
+      "Rasikh Dar\n",
+      "Sakib Hussain\n",
+      "Waseem Khanday\n",
+      "Ravi Kiran Majeti\n",
+      "Lukman Hussain Meriwala\n",
+      "Anuj Raj\n",
+      "Ankit Singh Rajpoot\n",
+      "Prince Yadav\n",
+      "Prithviraj Yarra\n",
+      "Mushtaq Beg\n",
+      "Rocky Bhasker\n",
+      "Sanjith Devaraj\n",
+      "Allah Mohammad\n",
+      "Lalit Mohan\n",
+      "Bhuwan Rohilla\n",
+      "Aman Sharma\n",
+      "Manav Suthar\n",
+      "Tom Curran\n",
+      "Moises Henriques\n",
+      "Afif Hossain\n",
+      "Scott Kuggeleijn\n",
+      "Sisanda Magala\n",
+      "Craig Overton\n",
+      "Darcy Short\n",
+      "Dhananjaya Silva\n",
+      "Dunith Wellalage\n",
+      "Varun Aaron\n",
+      "Sheldon Cottrel\n",
+      "Nathan Coulter-Nile\n",
+      "Daryn Dupavillon\n",
+      "Matt Henry\n",
+      "Dhawal Kulkarni\n",
+      "Tymal Mills\n",
+      "David Payne\n",
+      "Barinder Sran\n",
+      "Glenton Stuurman\n",
+      "Anirudh Balachander\n",
+      "Gourav Choudhary\n",
+      "Saurav Chuahan\n",
+      "Kumar Deobrat\n",
+      "Chirag Gandhi\n",
+      "Arman Jaffer\n",
+      "Madhav Kaushik\n",
+      "Priyank Panchal\n",
+      "Ayush Pandey\n",
+      "Rohan Patil\n",
+      "Sanjay Ramaswamy\n",
+      "Siddharth Yadav\n",
+      "Rehan Ahmed\n",
+      "Prayas Barman\n",
+      "Rahul Buddhi\n",
+      "Vaisakh Chandran\n",
+      "Writtick Chatterjee\n",
+      "Prashant Chopra\n",
+      "Harsh Dubey\n",
+      "Tanush Kotian\n",
+      "Ninad Rathva\n",
+      "B. Surya\n",
+      "Jordan Thompson\n",
+      "Shivank Vashisth\n",
+      "Ankush Bains\n",
+      "Christopher Benjamin\n",
+      "Connor Esterhuizen\n",
+      "Mohd Arslan Khan\n",
+      "Mamidi Krishna\n",
+      "Fazil Makaya\n",
+      "Akshdeep Nath\n",
+      "Deepak Punia\n",
+      "Ateev Saini\n",
+      "Bipin Saurabh\n",
+      "B.R. Sharath\n",
+      "Yashovardhan Singh\n",
+      "Lakshay Thareja\n",
+      "Mohit Avasthi\n",
+      "Ottneil Baartman\n",
+      "Gurnoor Singh Brar\n",
+      "Shahrukh Dar\n",
+      "Thomas Helm\n",
+      "Pankaj Jaswal\n",
+      "Venkatesh Muralidhara\n",
+      "Geet Puri\n",
+      "E. Sanketh\n",
+      "Ajay Sarkar\n",
+      "Ashok Sharma\n",
+      "Kanwar Singh\n",
+      "Fabian Allen\n",
+      "Carlos Brathwaite\n",
+      "Roston Chase\n",
+      "Rahkeem Cornwall\n",
+      "Karim Janat\n",
+      "Keshav Maharaj\n",
+      "Pawan Negi\n",
+      "Keemo Paul\n",
+      "Shivam Chaudhary\n",
+      "Ashwin Das\n",
+      "James Fuller\n",
+      "Chirag Jani\n",
+      "Akshay Karnewar\n",
+      "Bhagmender Lather\n",
+      "Lone Muzaffar\n",
+      "Pulkit Narang\n",
+      "Rohit Rayudu\n",
+      "Sameer Rizvi\n",
+      "Tunish Sawkar\n",
+      "Auqib Dar\n",
+      "Mukhtar Hussain\n",
+      "Ashwani Kumar\n",
+      "Hemant Kumar\n",
+      "Nathan McAndrew\n",
+      "Rajesh Mohanty\n",
+      "Ravi Sharma\n",
+      "Vikash Singh\n",
+      "Ruben Trumpelmann\n",
+      "Koushik Vasuki\n",
+      "Vasu Vats\n",
+      "Shubham Agrawal\n",
+      "Baba Aparajith\n",
+      "Anshul Kamboj\n",
+      "Azim Kazi\n",
+      "Dev Lakra\n",
+      "Jitender Pal\n",
+      "Ritwik Roy Chowdhury\n",
+      "Utkarsh Singh\n",
+      "Shubham Singh\n",
+      "Avneesh Sudha\n",
+      "Asad Jamil Ahmed\n",
+      "Bandaru Ayyappa\n",
+      "Aashish Bhatt\n",
+      "McKenny Clarke\n",
+      "Shubham Kapse\n",
+      "Gourav Koul\n",
+      "Raunak Kumar\n",
+      "Trilok Nag\n",
+      "Atal Bihari Rai\n",
+      "Ramon Simmonds\n",
+      "Rajeev Singh\n",
+      "Mohd. Wasim\n",
+      "Atharva Ankolekar\n",
+      "Khizar Dafedar\n",
+      "Naman Dhir\n",
+      "Sahil Dhiwan\n",
+      "Sampark Gupta\n",
+      "Jordan Hermann\n",
+      "Hayden Kerr\n",
+      "Salman Khan\n",
+      "Sairaj Patil\n",
+      "Divyaansh Saxena\n",
+      "Purnank Tyagi\n",
+      "Prince Yadav\n",
+      "Deepraj Gaonkar\n",
+      "Shubham Garhwal\n",
+      "Benny Howell\n",
+      "Deepesh Nailwal\n",
+      "Arjun Rapria\n",
+      "Shashwat Rawat\n",
+      "Sumit Ruikar\n",
+      "Shivam Sharma\n",
+      "Rajandeep Singh\n",
+      "Anunay Singh\n",
+      "Digvesh Singh\n",
+      "Pranshu Vijayran\n",
+      "Prerit Dutta\n",
+      "Ramakrishna Ghosh\n",
+      "Shubhang Hegde\n",
+      "Shamshuzama Kazi\n",
+      "Ayaz Khan\n",
+      "Amit Pachhara\n",
+      "Akul Pandove\n",
+      "Garv Sangwan\n",
+      "Shubham Sharma\n",
+      "Amit Yadav\n",
+      "Amit Ali\n",
+      "Rishabh Chauhan\n",
+      "Matthew Forde\n",
+      "Sammar Gajjar\n",
+      "Rajneesh Gurbani\n",
+      "Divyansh Joshi\n",
+      "Dhruv Patel\n",
+      "Jack Prestwidge\n",
+      "Aditya Sarvate\n",
+      "Sagar Solanki\n",
+      "Prenelan Subrayen\n"
      ]
     }
    ],
@@ -448,7 +748,10 @@
     "        \n",
     "        if i==1:\n",
     "            continue\n",
-    "        if line[7] == \"Unsold\":\n",
+    "        if line[6] == \"Unsold\":\n",
+    "            print(line[0])\n",
+    "        \n",
+    "        if line[2] == \"Retained\":\n",
     "            print(line[0])"
    ]
   },
