--- a/program/assondataset.ipynb
+++ b/program/assondataset.ipynb
@@ -757,9 +757,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K.S. Bharat\n",
+      "Urvil Patel\n",
+      "Wriddhiman Saha\n",
+      "Matthew Wade\n",
+      "MS Dhoni\n",
+      "Phil Salt\n",
+      "Rishabh Pant\n",
+      "N. Jagadeesan\n",
+      "Litton Das\n",
+      "Rahmanullah Gurbaz (T)\n",
+      "Shivam Singh\n",
+      "Jitesh Sharma\n",
+      "Jonny Bairstow\n",
+      "Prabhsimran Singh\n",
+      "Nicholas Pooran\n",
+      "Quinton De Kock\n",
+      "Vishnu Vinod\n",
+      "Tristan Stubbs*\n",
+      "Ishan Kishan\n",
+      "Anuj Rawat\n",
+      "Dinesh Karthik\n",
+      "Donovan Ferreira\n",
+      "Kunal Rathore\n",
+      "Sanju Samson\n",
+      "Dhruv Jurel\n",
+      "Jos Buttler\n",
+      "Heinrich Klaasen\n",
+      "Upendra Singh Yadav\n",
+      "Nitish Kumar Reddy\n",
+      "Glenn Phillips\n",
+      "Tom Banton\n",
+      "Kusal Mendis\n",
+      "Mohammed Azharuddeen\n",
+      "Dinesh Bana\n",
+      "Abhimanyu Easwaran\n",
+      "Sumit Kumar\n",
+      "Johnson Charles\n",
+      "Andre Fletcher\n",
+      "Shai Hope\n",
+      "Tom Latham\n",
+      "Joshua Philippe\n",
+      "Lorcan Tucker\n",
+      "Ricky Bhui\n",
+      "Baba Indrajith\n",
+      "Sheldon Jackson\n",
+      "Aryan Juyal\n",
+      "Kirant Shinde\n",
+      "Luvnith Sisodia\n",
+      "Vishnu Solanki\n",
+      "Ajitesh Guruswamy\n",
+      "Yash Kothari\n",
+      "Suresh Kumar\n",
+      "Kumar Kushagra\n",
+      "Anmol Malhotra\n",
+      "Robin Minz\n",
+      "Agniv Pan\n",
+      "Priyesh Patel\n",
+      "Mitesh Patel\n",
+      "Abishek Porel\n",
+      "Bharat Sharma\n",
+      "Vivek Singh\n",
+      "Abhijeet Tomar\n",
+      "Ankush Bains\n",
+      "Christopher Benjamin\n",
+      "Connor Esterhuizen\n",
+      "Mohd Arslan Khan\n",
+      "Mamidi Krishna\n",
+      "Fazil Makaya\n",
+      "Akshdeep Nath\n",
+      "Deepak Punia\n",
+      "Ateev Saini\n",
+      "Bipin Saurabh\n",
+      "B.R. Sharath\n",
+      "Yashovardhan Singh\n",
+      "Lakshay Thareja\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "\n",
@@ -774,7 +856,7 @@
     "        \n",
     "        if i==1:\n",
     "            continue\n",
-    "        if (line[0]):\n",
+    "        if line[2]==\"WICKETKEEPER\":\n",
     "            print(line[0])"
    ]
   }
