--- a/program/assondataset.ipynb
+++ b/program/assondataset.ipynb
@@ -757,88 +757,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K.S. Bharat\n",
-      "Urvil Patel\n",
-      "Wriddhiman Saha\n",
-      "Matthew Wade\n",
-      "MS Dhoni\n",
-      "Phil Salt\n",
-      "Rishabh Pant\n",
-      "N. Jagadeesan\n",
-      "Litton Das\n",
-      "Rahmanullah Gurbaz (T)\n",
-      "Shivam Singh\n",
-      "Jitesh Sharma\n",
-      "Jonny Bairstow\n",
-      "Prabhsimran Singh\n",
-      "Nicholas Pooran\n",
-      "Quinton De Kock\n",
-      "Vishnu Vinod\n",
-      "Tristan Stubbs*\n",
-      "Ishan Kishan\n",
-      "Anuj Rawat\n",
-      "Dinesh Karthik\n",
-      "Donovan Ferreira\n",
-      "Kunal Rathore\n",
-      "Sanju Samson\n",
-      "Dhruv Jurel\n",
-      "Jos Buttler\n",
-      "Heinrich Klaasen\n",
-      "Upendra Singh Yadav\n",
-      "Nitish Kumar Reddy\n",
-      "Glenn Phillips\n",
-      "Tom Banton\n",
-      "Kusal Mendis\n",
-      "Mohammed Azharuddeen\n",
-      "Dinesh Bana\n",
-      "Abhimanyu Easwaran\n",
-      "Sumit Kumar\n",
-      "Johnson Charles\n",
-      "Andre Fletcher\n",
-      "Shai Hope\n",
-      "Tom Latham\n",
-      "Joshua Philippe\n",
-      "Lorcan Tucker\n",
-      "Ricky Bhui\n",
-      "Baba Indrajith\n",
-      "Sheldon Jackson\n",
-      "Aryan Juyal\n",
-      "Kirant Shinde\n",
-      "Luvnith Sisodia\n",
-      "Vishnu Solanki\n",
-      "Ajitesh Guruswamy\n",
-      "Yash Kothari\n",
-      "Suresh Kumar\n",
-      "Kumar Kushagra\n",
-      "Anmol Malhotra\n",
-      "Robin Minz\n",
-      "Agniv Pan\n",
-      "Priyesh Patel\n",
-      "Mitesh Patel\n",
-      "Abishek Porel\n",
-      "Bharat Sharma\n",
-      "Vivek Singh\n",
-      "Abhijeet Tomar\n",
-      "Ankush Bains\n",
-      "Christopher Benjamin\n",
-      "Connor Esterhuizen\n",
-      "Mohd Arslan Khan\n",
-      "Mamidi Krishna\n",
-      "Fazil Makaya\n",
-      "Akshdeep Nath\n",
-      "Deepak Punia\n",
-      "Ateev Saini\n",
-      "Bipin Saurabh\n",
-      "B.R. Sharath\n",
-      "Yashovardhan Singh\n",
-      "Lakshay Thareja\n"
+      "WICKETKEEPER: K.S. Bharat\n",
+      "WICKETKEEPER: Urvil Patel\n",
+      "WICKETKEEPER: Wriddhiman Saha\n",
+      "WICKETKEEPER: Matthew Wade\n",
+      "WICKETKEEPER: MS Dhoni\n",
+      "WICKETKEEPER: Phil Salt\n",
+      "WICKETKEEPER: Rishabh Pant\n",
+      "WICKETKEEPER: N. Jagadeesan\n",
+      "WICKETKEEPER: Litton Das\n",
+      "WICKETKEEPER: Rahmanullah Gurbaz (T)\n",
+      "WICKETKEEPER: Shivam Singh\n",
+      "WICKETKEEPER: Jitesh Sharma\n",
+      "WICKETKEEPER: Jonny Bairstow\n",
+      "WICKETKEEPER: Prabhsimran Singh\n",
+      "WICKETKEEPER: Nicholas Pooran\n",
+      "WICKETKEEPER: Quinton De Kock\n",
+      "WICKETKEEPER: Vishnu Vinod\n",
+      "WICKETKEEPER: Tristan Stubbs*\n",
+      "WICKETKEEPER: Ishan Kishan\n",
+      "WICKETKEEPER: Anuj Rawat\n",
+      "WICKETKEEPER: Dinesh Karthik\n",
+      "WICKETKEEPER: Donovan Ferreira\n",
+      "WICKETKEEPER: Kunal Rathore\n",
+      "WICKETKEEPER: Sanju Samson\n",
+      "WICKETKEEPER: Dhruv Jurel\n",
+      "WICKETKEEPER: Jos Buttler\n",
+      "WICKETKEEPER: Heinrich Klaasen\n",
+      "WICKETKEEPER: Upendra Singh Yadav\n",
+      "WICKETKEEPER: Nitish Kumar Reddy\n",
+      "WICKETKEEPER: Glenn Phillips\n",
+      "WICKETKEEPER: Tom Banton\n",
+      "WICKETKEEPER: Kusal Mendis\n",
+      "WICKETKEEPER: Mohammed Azharuddeen\n",
+      "WICKETKEEPER: Dinesh Bana\n",
+      "WICKETKEEPER: Abhimanyu Easwaran\n",
+      "WICKETKEEPER: Sumit Kumar\n",
+      "WICKETKEEPER: Johnson Charles\n",
+      "WICKETKEEPER: Andre Fletcher\n",
+      "WICKETKEEPER: Shai Hope\n",
+      "WICKETKEEPER: Tom Latham\n",
+      "WICKETKEEPER: Joshua Philippe\n",
+      "WICKETKEEPER: Lorcan Tucker\n",
+      "WICKETKEEPER: Ricky Bhui\n",
+      "WICKETKEEPER: Baba Indrajith\n",
+      "WICKETKEEPER: Sheldon Jackson\n",
+      "WICKETKEEPER: Aryan Juyal\n",
+      "WICKETKEEPER: Kirant Shinde\n",
+      "WICKETKEEPER: Luvnith Sisodia\n",
+      "WICKETKEEPER: Vishnu Solanki\n",
+      "WICKETKEEPER: Ajitesh Guruswamy\n",
+      "WICKETKEEPER: Yash Kothari\n",
+      "WICKETKEEPER: Suresh Kumar\n",
+      "WICKETKEEPER: Kumar Kushagra\n",
+      "WICKETKEEPER: Anmol Malhotra\n",
+      "WICKETKEEPER: Robin Minz\n",
+      "WICKETKEEPER: Agniv Pan\n",
+      "WICKETKEEPER: Priyesh Patel\n",
+      "WICKETKEEPER: Mitesh Patel\n",
+      "WICKETKEEPER: Abishek Porel\n",
+      "WICKETKEEPER: Bharat Sharma\n",
+      "WICKETKEEPER: Vivek Singh\n",
+      "WICKETKEEPER: Abhijeet Tomar\n",
+      "WICKETKEEPER: Ankush Bains\n",
+      "WICKETKEEPER: Christopher Benjamin\n",
+      "WICKETKEEPER: Connor Esterhuizen\n",
+      "WICKETKEEPER: Mohd Arslan Khan\n",
+      "WICKETKEEPER: Mamidi Krishna\n",
+      "WICKETKEEPER: Fazil Makaya\n",
+      "WICKETKEEPER: Akshdeep Nath\n",
+      "WICKETKEEPER: Deepak Punia\n",
+      "WICKETKEEPER: Ateev Saini\n",
+      "WICKETKEEPER: Bipin Saurabh\n",
+      "WICKETKEEPER: B.R. Sharath\n",
+      "WICKETKEEPER: Yashovardhan Singh\n",
+      "WICKETKEEPER: Lakshay Thareja\n"
      ]
     }
    ],
@@ -857,7 +857,7 @@
     "        if i==1:\n",
     "            continue\n",
     "        if line[2]==\"WICKETKEEPER\":\n",
-    "            print(line[0])"
+    "            print(\"WICKETKEEPER:\",line[0])"
    ]
   }
  ],
