--- a/program/assondataset.ipynb
+++ b/program/assondataset.ipynb
@@ -859,6 +859,82 @@
     "        if line[2]==\"WICKETKEEPER\":\n",
     "            print(\"WICKETKEEPER:\",line[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: OnePlus\n",
+      "Name: Oppo\n",
+      "Name: Vivo\n",
+      "Name: OnePlus\n",
+      "Name: Samsung\n",
+      "Name: Oppo\n",
+      "Name: OnePlus\n",
+      "Name: OnePlus\n",
+      "Name: Samsung\n",
+      "Name: Oppo\n",
+      "Name: Samsung\n",
+      "Name: OnePlus\n",
+      "Name: Oppo\n",
+      "Name: Motorola\n",
+      "Name: Sony\n",
+      "Name: OnePlus\n",
+      "Name: Samsung\n",
+      "Name: Oppo\n",
+      "Name: Samsung\n",
+      "Name: Oppo\n",
+      "Name: Samsung\n",
+      "Name: Samsung\n",
+      "Name: Oppo\n",
+      "Name: Nokia\n",
+      "Name: Samsung\n",
+      "Name: Samsung\n",
+      "Name: Nokia\n",
+      "Name: Samsung\n",
+      "Name: OnePlus\n",
+      "Name: Oppo\n",
+      "Name: OnePlus\n",
+      "Name: Huawei\n",
+      "Name: Samsung\n",
+      "Name: Samsung\n",
+      "Name: Huawei\n",
+      "Name: Samsung\n",
+      "Name: Nokia\n",
+      "Name: Samsung\n",
+      "Name: Oppo\n",
+      "Name: OnePlus\n",
+      "Name: Samsung\n",
+      "Name: Samsung\n",
+      "Name: Nokia\n",
+      "Name: OnePlus\n",
+      "Name: Samsung\n",
+      "Name: Samsung\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "i=0\n",
+    "max=1\n",
+    "with open(\"E:/Fullstack/dataset/Mobile phone price.csv\",\"r\") as file_object:\n",
+    "\n",
+    "    data = csv.reader(file_object) # it will read the data from csv file store in data\n",
+    "    \n",
+    "    for line in data:   # reads from iterable data object and puts each line in line object for  every loop\n",
+    "        i=i+1\n",
+    "        \n",
+    "        if i==1:\n",
+    "            continue\n",
+    "        if line[6]==\"4500\":\n",
+    "            print(\"Name:\",line[0])"
+   ]
   }
  ],
  "metadata": {
