--- a/program/assondataset.ipynb
+++ b/program/assondataset.ipynb
@@ -933,7 +933,90 @@
     "        if i==1:\n",
     "            continue\n",
     "        if line[6]==\"4500\":\n",
-    "            print(\"Name:\",line[0])"
+    "            print(\"Name:\",line[0])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: iPhone 13 Pro\n",
+      "Name: 9 Pro\n",
+      "Name: Redmi Note 10 Pro\n",
+      "Name: Pixel 6\n",
+      "Name: iPhone 13\n",
+      "Name: Poco X3 Pro\n",
+      "Name: Reno6 Pro+ 5G\n",
+      "Name: Nord CE 5G\n",
+      "Name: Galaxy A52s 5G\n",
+      "Name: GT Neo2\n",
+      "Name: Mi 11 Lite 5G NE\n",
+      "Name: Galaxy S21\n",
+      "Name: Y20s (G)\n",
+      "Name: 8s 5G\n",
+      "Name: A94\n",
+      "Name: Redmi 10 Prime\n",
+      "Name: Galaxy A22 5G\n",
+      "Name: Narzo 50 Pro 5G\n",
+      "Name: 9\n",
+      "Name: Redmi Note 10 Pro Max\n",
+      "Name: A74 5G\n",
+      "Name: 9i\n",
+      "Name: Galaxy M52 5G\n",
+      "Name: Redmi 10\n",
+      "Name: A53s\n",
+      "Name: Y33s\n",
+      "Name: C25s\n",
+      "Name: Galaxy A22 4G\n",
+      "Name: Nord 2 5G\n",
+      "Name: F19 Pro+ 5G\n",
+      "Name: Mi 11X\n",
+      "Name: V21e\n",
+      "Name: 8 5G\n",
+      "Name: Redmi 9 Power\n",
+      "Name: Galaxy A52s 5G\n",
+      "Name: A54\n",
+      "Name: Redmi 9T\n",
+      "Name: Y33\n",
+      "Name: Galaxy A72\n",
+      "Name: Reno6 Pro 5G\n",
+      "Name: Y53s\n",
+      "Name: 7i\n",
+      "Name: Galaxy A52 5G\n",
+      "Name: F19 Pro\n",
+      "Name: Redmi Note 10S\n",
+      "Name: Y21s\n",
+      "Name: C25s\n",
+      "Name: Galaxy A22 5G\n",
+      "Name: A94\n",
+      "Name: Mi 11 Lite 5G\n",
+      "Name: iPhone 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "i=0\n",
+    "max=1\n",
+    "with open(\"E:/Fullstack/dataset/Mobile phone price.csv\",\"r\") as file_object:\n",
+    "\n",
+    "    data = csv.reader(file_object) # it will read the data from csv file store in data\n",
+    "    \n",
+    "    for line in data:   # reads from iterable data object and puts each line in line object for  every loop\n",
+    "        i=i+1\n",
+    "        \n",
+    "        if i==1:\n",
+    "            continue\n",
+    "        if line[2]==\"128 GB\":\n",
+    "            print(\"Name:\",line[1])\n",
+    "        "
    ]
   }
  ],
